width fix on mobile 6

--- a/app.css
+++ b/app.css
@@ -65,7 +65,7 @@ button {
 
 .zone-number {
     border: none;
-    width: auto;
+   
     font-size: 1.3rem;
 }
 
